--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,10 @@
   <title>KissanMart</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+ 
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
